Adding R scripts for analysis of nuclear-selector output.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+**.Rproj
+**/.DS_Store
+**/tmp/
+
+# Template by GitHub
+# =============================================
+
+
 # History files
 .Rhistory
 .Rapp.history
